# study_ocr

./: README.md
FDOcr/: CMakeLists.txt
FDOcr/PyEncDec/: CMakeLists.txt
FDOcr/PyEncDec/main/: main.cpp
FDOcr/PyEncDec/src/: main.cpp
FDOcr/Test/pytest/: test_pyOcr.py
FDOcr/cmake/: ENV.cmake
FDOcr/infer/: CMakeLists.txt
FDOcr/infer/main/: main.cpp
FDOcr/infer/src/: fd_ocr.cpp  fd_ocr.h  ocr_config.h
FDOcr/pybind/: CMakeLists.txt
FDOcr/pybind/src/: main.cc  runtime.cc
